<resources>
    <string name="app_name">Quantifiers</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Title Screen -->
    <string name="title_home_welcome">Welcome to QU\u2200NTIFI\u2203RS</string>
    <string name="button_to_instructions">How To Play</string>
    <string name="button_to_game_modes">Game Modes</string>

    <string name="submit">SUBMIT</string>
    <string name="no_solution">NO SOLUTION</string>

    <!--How to Play-->
    <string name="howPlay">HOW TO PLAY</string>
    <string name="htp_welcome">Welcome! This tutorial will take you through
        the basics of playing QU\u2200NTIFI\u2203RS while explaining the
        mathematical terms you'll see in the game.</string>
    <string name="universal">Universal Quantifier</string>
    <string name="existential">Existential Quantifier</string>
    <string name="forAllMeaning">Means "for all"</string>
    <string name="forEveryMeaning">Means "for every"</string>
    <string name="forAll">\u2200</string>
    <string name="forEvery">\u2203</string>
    <string name="toQuestions">LET\'S SEE THE QUESTION FORMAT!</string>
    <string name="oneOfFour">1/4</string>

    <!--Question Styles-->
    <string name="setNote">SET NOTATION</string>
    <string name="demoText2">Describes an interval of numbers using comparisons and quantifiers.
        Examples of the pieces of set notation are shown below!</string>
    <string name="qPart1">x ∈ ℝ</string>
    <string name="qPart2">|</string>
    <string name="qPart3">x > 3</string>
    <string name="xInReal">means "all x's in the real numbers"</string>
    <string name="suchThat">means "such that"; can be read as "where"</string>
    <string name="greaterThan">means "x is greater than 3"</string>
    <string name="toCompleteQ">SEE THE COMPLETE QUESTION!!</string>
    <string name="twoOfFour">2/4</string>

    <!--Demo Question-->
    <string name="example">EXAMPLE Q AND A</string>
    <string name="demoQ">{x ∈ ℝ | x >= 3}</string>
    <string name="readQuestion">Put together, the question reads: "the x values in the real numbers where x is greater than 3"</string>
    <string name="ansDescription">What numbers satisfy this? The interval answer is below!</string>
    <string name="ans">[3, \u221E)</string>
    <string name="squareBrackets">[ ]</string>
    <string name="roundBrackets">( )</string>
    <string name="squareBracketsDescription">closed bracket(s): includes the number it\'s used with in the interval </string>
    <string name="roundBracketsDescription">open bracket(s): excludes number it\'s used with. Always use this with \u221E or -\u221E!!!</string>
    <string name="toPractice">LET ME PRACTICE!!!</string>
    <string name="threeOfFour">3/4</string>

    <!--Try A Question-->
    <string name="tryQuestion">HOW TO ANSWER</string>
    <string name="practice">PRACTICE QUESTION: </string>
    <string name="trialQ">{x ∈ ℝ | x &lt;= 0}</string>
    <string name="bracketDescription">Click the left and right brackets to choose between open and closed</string>
    <string name="numberDescription">Click the numbers to choose from 0-9, -\u221E, and \u221E</string>
    <string name="answer">YOUR ANSWER BELOW: </string>
    <string name="fourOfFour">4/4</string>
    <string name="backHome">BACK TO HOME SCREEN</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>

    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>

    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Classic Game -->
    <string-array name="numeric_array">
        <item>\u221E</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
        <item>-6</item>
        <item>-7</item>
        <item>-8</item>
        <item>-9</item>
        <item>-\u221E</item>
    </string-array>

    <string-array name="leftBracket">
        <item>(</item>
        <item>[</item>
    </string-array>

    <string-array name="rightBracket">
        <item>)</item>
        <item>]</item>
    </string-array>
    <string name="title_activity_crazy_game">CrazyGame</string>

</resources>
